# Octocore

./: .gitignore  Cargo.toml  devenv.nix  devenv.yaml  flake.nix
docs/: ad1938.md  sequencer.md
examples/: color_leds.rs  push2_demo.rs
octocore/: Cargo.toml
octocore/src/: adsr.rs  lib.rs  midi.rs  midi_input.rs  midi_output.rs  modulation.rs  poly.rs  sequencer.rs  synth_params.rs
octocore/src/midi/: colors.rs  controls.rs  io.rs
octocore/src/ui/: button.rs  events.rs  page.rs  page_stack.rs  ui_state.rs  widget.rs
src/: Poly.rs  adsr.rs  display.rs  graphix.rs  lib.rs  main.rs  midi_input.rs  midi_output.rs  modulation.rs  p_sine.rs  param.rs  poly.rs  push.rs  synth.rs  synth_params.rs  ui.rs  ui_state.rs  voice_params.rs
src/midi/: controls.rs  io.rs  sysex.rs
src/push2/: controls.rs  device.rs  events.rs  led.rs  midi.rs  mod.rs
src/ui/: page.rs
