[package]
name = "octocore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "octocore"
path = "src/main.rs"

[[example]]
name = "push2_demo"
path = "examples/push2_demo.rs"

[[example]]
name = "push2_debug"
path = "examples/push2_debug.rs"

[dependencies]
cpal = "0.15.3"
fundsp = "0.16.0"
midi-msg = "0.8.1"
midir = "0.9.1"
anyhow = "1.0.80"
read_input = "0.8.6"
skia-safe = "0.90.0"
once_cell = "1.19.0"
rusb = "0.9.3"
rgb565 = "0.1.3"
typenum = "1.17.0"
